  horse into a good biome, makes you instantly sick.  Before, you weren't sick
  until moving, allowing you to pull items from your nearby horse cart into the
  bad biome and trap them there.  Fixes #477

--Eating bonus not applied to alcohol drinks.  Trying to get drunk no longer
  fills up your stomach so quickly.  Part of #481

--Halved rate that drunkenness wears off.  Part of #481



Version 298    2019-December-20

--Fixed so you can TAB to show blue hint arrows for single-recipe objects.
  Related to #418

--Fixed so that holding a use dummy that is both an ingredient and a target of
  a recipe doesn't block hint arrows.  Fixes #418



Server Fixes

--Fixed potential gene score exploit of tutorial lives being factored into your
  own average lifespan.  Lives that don't affect your score are no longer
  counted in your own average.  Fixes #473

--Fixed float precision errors in random animation movement that made it
  unlikely for them to move in certain non-diagonal directions.




Version 297    2019-December-18

--Fixed crash when mousing over at the moment they die.  Fixes #470

--Entering kill mode with shift-right-click no longer causes you to move toward
  the kill target.  Since there is a waiting period now, moving there right
  away doesn't make sense anymore.  Fixes #430

--Fixed so that when contents of a held container go through transition, the
  generic pickup sound is correctly played (was playing container creation
  sound by accident).  Fixes #431




Server Fixes

--Fixed crash when sending follow and exile messages to disconnected player.

--Fixed so that we don't burn lives when reconnecting, even if server sees us
  as still connected when we reconnect.  Fixes #443



Version 296    2019-December-14

--Moved badges to be drawn over top of backpack strap (so not covered by strap).



Server Fixes

--Leaders can now issue orders that are passed through their follower tree